--- a/style.css
+++ b/style.css
@@ -1,60 +1,38 @@
-.container{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    
-}
-.marker{
-    display: flex;
-    width: 25%;
-    padding: 1%;
-    height: 40px;
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css"/>
+  </head>
+  <body> 
+   
+    <div class="container">
+      <h1>CSS COLOR MARKERS</h1>
+      <div class="marker red">
+        <div class="d1_red">1</div>
+        <div class="d2_red">2</div>
+        <div class="d3_red">3</div>
+      </div>
     
 
-}
-.marker div{
-    padding: 1%;
-    color: transparent;
-    box-shadow: 0px 0px 30px black;
-}
-.d1_red{
-    width: 25%;
-    background-image: linear-gradient(rgba(255, 0, 0,1),rgba(255, 0, 0,0.5),rgba(255, 0, 0,1));
-}
-.d2_red{
-    width: 62.5%;
-    background-image: linear-gradient(rgba(255, 0, 0,0.6),rgba(255, 0, 0,0.2),rgba(255, 0, 0,0.6));
     
-    border-left: 10px double rgba(0, 0, 0,1) ;
-}
-.d3_red{
-    width: 12.5;
-    background-image: linear-gradient(rgba(255, 0, 0,1),rgba(255, 0, 0,0.5),rgba(255, 0, 0,1));
-}
-.d1_green{
-    width: 25%;
-    background-image: linear-gradient(rgb(60, 206, 2,1),rgb(72, 255, 0,0.5),rgb(72, 255, 0,1));
-}
-.d2_green{
-    width: 62.5%;
-    background-image: linear-gradient(rgb(60, 206, 2,0.6),rgb(72, 255, 0,0.2),rgb(72, 255, 0,0.6)); 
-    border-left: 10px double rgba(0, 0, 0,1) ;
-}
-.d3_green{
-    width: 12.5;
-    background-image: linear-gradient(rgb(60, 206, 2,1),rgb(72, 255, 0,0.5),rgb(72, 255, 0,1));
-}
-.d1_blue{
-    width: 25%;
-    background-image: linear-gradient(rgba(31, 4, 150,1),rgba(31, 4, 150,0.5),rgba(31, 4, 150,1));
-}
-.d2_blue{
-    width: 62.5%;
-    background-image: linear-gradient(rgba(31, 4, 150,0.6),rgba(31, 4, 150,0.2),rgba(31, 4, 150,0.6));
+      <div class="marker red">
+        <div class="d1_green ">1</div>
+        <div class="d2_green">2</div>
+        <div class="d3_green">3</div>
+      </div>
     
-    border-left: 10px double rgba(0, 0, 0,1) ;
-}
-.d3_blue{
-    width: 12.5;
-    background-image: linear-gradient(rgba(31, 4, 150,1),rgba(31, 4, 150,0.5),rgba(31, 4, 150,1));
-}
+
+    
+      <div class="marker red">
+        <div class="d1_blue ">1</div>
+        <div class="d2_blue">2</div>
+        <div class="d3_blue">3</div>
+      </div>
+    
+   
+  </body>
+</html>
